Fix Streamlit Cloud deployment: rename config.py to app_config.py and update dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ jupyter>=1.0.0
 ipykernel>=6.25.0
 
 # Image Processing
-opencv-python>=4.8.0
+opencv-python-headless>=4.8.0
 
 # Utilities
 python-dateutil>=2.8.0
